added initial prompt and switch cases for all cases

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "homepage": "https://github.com/Pting1995/employee-tracker#readme",
   "dependencies": {
     "inquirer": "^7.3.3",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.7"
+    "mysql": "^2.18.1"
   }
 }
